# llm-text-to-knowledge-graph

./: .gitignore  First bel network.json  MANIFEST.in  Pipfile  README.md  Zhao_review.json  augustin_review.json  bel_comparison_results.json  bel_output.json  bel_output1.json  build_comparison_table.py  clara_rev.json  combined_bel_output.json  combined_bel_output1.json  consensus_analysis.ipynb  cytoscape_web_how_to.md  deckhard_template.json  indra_bel_statements.json  indra_evidence_results.json  indra_vs_llm.py  instructions.txt  llm_bel_results.json  llm_output_pmid16962653.json  llm_vs_indra.ipynb  min_prompt_claude3.5.json  min_prompt_claude37.json  min_prompt_openai.json  nicole_rev.json  plot_scores.py  pmid16962653_sentences_with_bel_interactions.json  pyproject.toml  reach_output.json  requirements.txt  review_consensus.csv  review_list_data.json  run_convert_cx2.py  sentences_only.json  setup.py  structured_test_paper.json  test_annotations.json  (+13 more)
comparison_results/: comparison_pmc3898398.json  comparison_pmc9656.json  comparison_pmc9721.json  results_pmc3898398.json  results_pmc9656.json  results_pmc9721.json  text_claude_comparison.json  text_claude_res.json  text_data_annots.json  text_data_claude.json  text_data_openai.json  text_openai_comparison.json  text_openai_res.json
data/: minimal_prompt_1  minimal_prompt_1.txt  minimal_prompt_2.txt  prompt_file_v3.txt  prompt_file_v4.txt  prompt_file_v5.txt  prompt_file_v6.txt  prompt_file_v7.txt
evaluation_tests/: comp_reviews.py  index_evidences.json  jungho_rev.json  llm_results_20250505-1200.cx2  (+4 more)
(+407 files in other folders)
